# f8

./: LICENSE  README.md  pyproject.toml  reproduce.py
figures/: make_figures.py
results/: core_reproduction.json  gift.json  present.json  speck_variants.json
